app/assets/stylesheets/view_stylesheets/notes.css.scss
// Place all the styles related to the Notes controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/`

$comments-sidebar-width: 300px;
$highlight-color: #27F;
$thumbnail-width: 240px;
$thumbnail-height: 330px;

.notes-index-page {
  .full-screen-overlay {
    // position: absolute;
    position: fixed;
    height: 100%;

    top: 0;
    right: 0;
    left: 0;
  /*    bottom: 0;*/
    width: 100%;
    z-index: 999;
    background-color: rgba(0,0,0,.8);
  }

  #overview-modal {
    background-color: rgba(0,0,0,0);
    border: none;

    .fade.in {
      opacity: 0;
    }
  }

  .modal-container-container {
    position: absolute;
    z-index: 1050;
    top: 0;
    left: 0;
    right: 0;
    padding-top: 70px;
    padding-bottom: 70px;

    .modal-container {
      text-align: center;
      margin: 0 100px;
    }
  }


  .thumb-container {
    display: inline-block;
    width: $thumbnail-width;
    // height: 100%;//$thumbnail-height;
    border: 3px solid;
    border-color: transparent;
    &:hover {
      border-color: rgb(0, 160, 255);
    }
  }
}

#note-main {
  padding-left: 20px;
  min-width: 800px;

  &.new-comment-showing {
    margin-right: 0;
    padding-right: 50px + $comments-sidebar-width;
  }

  .note-description {
    font-size: 2em;
  }
  .note-images {
    margin-top: 40px;
  }

  .file-container {
    overflow: auto;
    margin: 15px 0;
  }

  .image-container-outer {
    overflow: auto;
    max-width: 70%;
    float: left;

    .image-container {
      display: inline-block;
      max-width: 100%;

      .image-border {
        border: solid 1px #aaa;
      }
    }
  }  
  .comments-container {
    position: relative;
    float: left;
    width: calc(30% - 20px);
    width: -webkit-calc(30% - 20px);
    width: -moz-calc(30% - 20px);
    width: -ms-calc(30% - 20px);
    margin-left: 20px;
    min-height: 1px;
    overflow: visible;
  }
}

#new-comment-container {
  position: fixed;
  width: 100%;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.8);
  z-index: 10;
  display: none;
}

#new-comment-header-container {
  background-color: #34495E;
  color: white;
  padding: 5px 10px;
  z-index: 100000;
  display: none;
  position: fixed;
  right: 0;
  top: 0;
  height: 35px;
  width: $comments-sidebar-width - 20px;
  text-align: center;
  box-shadow: #000 2px 0px 2px;

  .new-comment-cancel {
    float: left;
    font-size: 1.5em;
    padding-bottom: 10px;
    -webkit-user-select: none;
  }

  h3 {
    font-size: 1.5em;
    line-height: 1.4;
    margin-right: 35px;
  }
}

.tooltip.right {
  padding: 0;
}

#new-comment-panel {
  position: absolute;
  display: none;
  min-width: 100%;
  -webkit-transition: top 0.2s ease;
  top: 50px;
  left: -13px;
  
  border-radius: 4px;
  // border: 4px solid $highlight-color;
  box-shadow: #888 1px 1px 5px;
  z-index: 100;

  
  .tooltip-inner {
    min-width: 100%;
    background-color: #fffff2;
    padding: 0;
    position: relative;
  }

  .tooltip-arrow {
    // border: none;
    left: -8px;
    border-right-color: #ffffff;

  }

  #newcomment {
    width: 97%;
    padding-left: 3%;
    min-height: 100px;
    resize: none;
    border: none;
    border-bottom: 1px solid #aaa;
    border-radius: 4px 4px 0 0;
    margin: 0;
  }

  .btndiv { 
    text-align: right;
    .btn {
      display: inline-block;
      margin: 6px 5px;
    }
  }

}

#new-comment-position-line {
  position: absolute;
  bottom: 38px;
  left: -14px;
  width: 0px;
  height: 4px;
  background-color: $highlight-color;

  .left-arrow {
    position: relative;
    top: -8px;
    left: -10px;
    width: 0;
    height: 0;
    border-top: 22px solid transparent;
    border-bottom: 22px solid transparent;
    border-right: 10px solid $highlight-color;
  }
}

.comments-sidebar {
  background-color: #34495E;
  width: 20%;
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  overflow-y: auto;
  padding: 10px;
  box-shadow: -2px 0 2px #bbc;
  z-index: 100;
}

.comment-button {
  position: absolute;
  left: -15px;

  i {
    font-size: 1.5em;
    color: #88b;
    -webkit-transition: color 0.1s ease;
    &:hover {
      color: #55a;
      cursor: pointer;
    }
    &:active, &.active {
      color: #228;
    }
  }
}

.comment {
  margin-left: 10px;
  position: relative;

  .comment-inner {
    border-radius: 10px 4px 4px;
    padding: 5px 8px;
    background-color: white;
    border: 1px solid #ddd;
  }

  &.reply {
    margin-left: 15px;
    margin-top: 5px;
    
    .comment-inner {
      background-color: #f7f7f9;
      border-color: #d5d5d5;
    }
  }

  &.active {
    // background-color: $highlight-color;
  }

  .user {
    font-weight: bold;
    margin-bottom: 3px;
  }
  .profile-container {
    width: 40px;
    height: 40px;
    padding: 2px;
    float: left;
    margin-right: 10px;
    margin-left: -10px;
    margin-top: -10px;
  }
  .comment-body {
    overflow: auto;
  }
  .comment-text {
    color: #222;
  }
  .bottom {
    margin-top: 4px;
  }
  .comment-date {
    color: #aaa;
    float: left;
  }
  .bottom {
    .text-link {
      float: right;
      color: #34495E;
      font-weight: normal;
    }    
  }
  .reply-button {
    margin-left: 10px;
  }
  .delete-confirm-panel {
    display: none;
    background-color: #bbb;
    border-top: 1px solid #999;
    margin: 10px -8px -5px;
    border-radius: 0 0 5px 5px;

    .btn {
      margin: 5px 0 5px 10px;
    }
  }
}

.circular {
  width: 300px;
  height: 300px;
  border-radius: 150px;
  -webkit-border-radius: 150px;
  -moz-border-radius: 150px;
}

.profile_info {
  font-size: 30px;
  margin-left: 30px;
  margin-bottom: 15px;
  color: grey;
}
/* ... */

